chore: save transformed data to csv

--- a/weather_TL.ipynb
+++ b/weather_TL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "49eaaf23",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7a9b63e9",
+   "execution_count": 12,
+   "id": "1c4c35ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/antananarivo_2020-11-17_to_2023-08-13.csv\")"
+    "filename = \"antananarivo_2020-11-17_to_2023-08-13.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "id": "7a9b63e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(f\"./data/{filename}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "72ab3c82",
    "metadata": {},
    "outputs": [],
@@ -40,6 +50,16 @@
     "data2021 = df.where(df[\"year\"] == 2021)\n",
     "data2022 = df[df[\"year\"] == 2022]\n",
     "data2023 = df[df[\"year\"] == 2023]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9cbfbf8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(f\"./result/{filename}\")"
    ]
   },
   {
